--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
     border-radius: 8px;
     overflow: hidden;
     transition: box-shadow 0.3s ease;
+    background-color: var(--SmartThemeBlurTintColor);
 }
 
 .character-list-item:hover {
@@ -41,9 +42,8 @@
 
 .character-list-item .info .name {
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     font-size: 1.2em;
-    color: var(--SmartThemeBodyColor);
 }
 
 .character-list-item .info .name a {
@@ -52,7 +52,7 @@
 }
 
 .character-list-item .info .description {
-    color: #666;
+    color: var(--SmartThemeBodyColor);
     margin-bottom: 10px;
     overflow: hidden;
     display: -webkit-box;
@@ -68,7 +68,8 @@
 }
 
 .character-list-item .info .tag {
-    background-color: #f0f0f0;
+    background-color: var(--SmartThemeBlurTintColor);
+    color: var(--SmartThemeBodyColor);
     padding: 3px 8px;
     border-radius: 12px;
     font-size: 0.8em;
@@ -77,7 +78,12 @@
 .character-list-item .info .author {
     font-size: 0.9em;
     color: var(--SmartThemeEmColor);
-    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
+.character-list-item .download-container {
+    padding: 10px;
+    text-align: right;
 }
 
 .page-buttons {
